--- a/_posts/2018-06-25-blog-em.md
+++ b/_posts/2018-06-25-blog-em.md
@@ -9,7 +9,7 @@ categories:
 ---
 
 We have observed variable $$x$$, latent varivable $$z$$ and parameters $$\theta$$. The complete log likelihood should be 
-$$l(\theta;x,z) = \log p(x,z \| \theta)$$. However, since we do not know $$z$$, $$l(\theta;x) = log p(x|\theta) = log \sum_z p(x,z|theta)$$ will not decouple.
+$$l(\theta;x,z) = \log p(x,z | \theta)$$. However, since we do not know $$z$$, $$l(\theta;x) = \log p(x | \theta) = \log \sum_z p(x,z | \theta)$$ will not decouple.
 
 So we define a new objective function **the expectation of $$l(\theta;x,z)$$ over $$z \sim q(z)$$**
 Properties are:
