--- a/_posts/2018-06-25-blog-em.md
+++ b/_posts/2018-06-25-blog-em.md
@@ -11,6 +11,9 @@ categories:
 We have observed variable $$x$$, latent varivable $$z$$ and parameters $$\theta$$. The complete log likelihood should be 
 $$l(\theta;x,z) = \log p(x,z | \theta)$$. However, since we do not know $$z$$, $$l(\theta;x) = \log p(x | \theta) = \log \sum_z p(x,z | \theta)$$ will not decouple.
 
+1. E-step: Hallucinate some data, treating parameters as observed.
+2. M-step: Standard Bayes Net training, treating latent variables as observed.
+
 So we define a new objective function **the expectation of $$l(\theta;x,z)$$ over $$z \sim q(z)$$**
 Properties are:
 * $$E[l(\theta;x,z)]$$ is the lower bound of $$l(\theta;x)$$ 
