--- a/_posts/2018-07-11-blog-svd.md
+++ b/_posts/2018-07-11-blog-svd.md
@@ -10,5 +10,5 @@ categories:
   - Machine Learning
 ---
 
-![svd]({{site.url}}{{site.baseurl}}/assets/images/svd.PNG)
-![Time-frequency tiling]({{site.url}}{{site.baseurl}}/assets/images/pca.PNG)
+![svd]({{site.url}}{{site.baseurl}}/assets/images/svd.png)
+![Time-frequency tiling]({{site.url}}{{site.baseurl}}/assets/images/pca.png)
