--- a/_posts/2018-07-11-blog-svd.md
+++ b/_posts/2018-07-11-blog-svd.md
@@ -10,5 +10,7 @@ categories:
   - Machine Learning
 ---
 
+The notes from cmu 17spring-18898:
+
 ![svd]({{site.url}}{{site.baseurl}}/assets/images/svd.png)
-![Time-frequency tiling]({{site.url}}{{site.baseurl}}/assets/images/pca.png)
+![pna]({{site.url}}{{site.baseurl}}/assets/images/pca.png)
