--- a/_posts/2018-07-13-blog-ip.md
+++ b/_posts/2018-07-13-blog-ip.md
@@ -17,4 +17,6 @@ Mosleh, Ali, JM Pierre Langlois, and Paul Green. "Image deconvolution ringing ar
 
 > These light and dark ripples are mainly due to the Gibbs phenomenon as the Fourier sums overshoot at discontinuities (i.e., image edges), and this overshoot does not die out while the frequency increases. This phenomenon can be amplified if the noise ω is not modeled accurately and if the blur kernal is noisy or inaccurately estimated. The latter case is even more serious in blind deconvolution approaches that involve kernal estimation from the blurred image"
 
-### 
+### Bicubic interpolation
+From wikipedia
+> In image resampling, bicubic interpolation is often chosen over bilinear or nearest-neighbor interpolation when speed is not an issue. In contrast to bilinear interpolation, which only takes 4 pixels (2×2) into account, bicubic interpolation considers 16 pixels (4×4). Images resampled with bicubic interpolation are smoother and have fewer interpolation artifacts.
