--- a/_posts/2018-08-03-blog-mcmc.md
+++ b/_posts/2018-08-03-blog-mcmc.md
@@ -23,14 +23,36 @@ So we have a few methods belong to the Monte Carlo methods:
 * Markov chain Monte Carlo (MCMC): Metropolis-Hasting, Gibbs
 
 ### Rejection sampling:
-How to generate samples given a distribution $$p(x)$$? How to convert samples from a Uniform[0,1] generator to samples that follows distribution $$p(x)$$? One way is to compute cdf $$h(y)$$, which is a uniform non-decreasing function in [0,1]. Then for every sample $$u$$ from Uniform[0,1], we can get $$x = h^{-1}(u)$$ that $$x \sim p(x)$$. But this won’t work if $$\hat{p}(x)$$ is not normalized. This leads to the idea of rejection sampling:
+How to generate samples given a distribution $$p(x)$$? How to convert samples from a Uniform[0,1] generator to samples that follows distribution $$p(x)$$? One way is to compute cdf $$h(y)$$, which is a uniform non-decreasing function in [0,1]. Then for every sample $$u$$ from Uniform[0,1], we can get $$x = h^{-1}(u)$$ that $$x \sim p(x)$$. But this won’t work if $$\hat{p}(x)$$ is not normalized (assume $$p(x) = \frac{\hat{p}(x)}{Z}$$). This leads to the idea of rejection sampling:
 1. Come up with a probability distribution $$Q(x)$$ (usually Gaussian) that we can easily draw samples from.
 2. Find a constant $$k$$ such that $$\frac{\hat{p}(x)}{kQ(x)} < 1$$.
 3. Draw a sample $$x_0$$ from $$Q$$
 4. Accept a sample with probability $$\frac{\hat{p}(x)}{kQ(x)}$$: sample $$u_0$$ from Uniform[0,$$kQ(x_0)$$], accept the sample if $$u_0 < \hat{p}(x_0)$$
-![rs]({{site.url}}{{site.baseurl}}/assets/images/rej_sample.jpeg)
+
+![rs]({{site.url}}{{site.baseurl}}/assets/images/rej_sample.JPG)
 
 And it can be proved that the accpected samples follows $$p(x)$$.
+
 **Pitfalls:** 
 * Scale badly with dimensionality (acceptance rate exponentially decreases)
 * If $$Q(x)$$ is chosen badly (if $$p$$ and $$Q$$ both are Gaussian), acceptance rate is really low
+
+### Importance sampling:
+A different idea is to retain all the samples and re-weight them while computing their mean.
+$$E_p[f(x)] = \int f(x)p(x)dx = \int f(x) \frac{p(x)}{q(x)}q(x)dx  \approx \frac{1}{N} \sum_{n=1}^{N} f(x^{(n)}) \frac{p(x^{(n)})}{q(x^{(n)})}$$, where $$x^{(n)} \sim q(x)$$. This a an unbiased estimator.
+However, when we only have unnormalized distribution $$\hat{p}(x)$$, $$E_p[f(x)] \approx \sum_{n} f(x^{(n)})w^{(n)}$$, where $$w^{(n)} = \frac{\hat{p}(x^{(n)})}{\hat{q}(x^{(n)})}\Big/\sum_l \frac{\hat{p}(x^{(l)})}{\hat{q}(x^{(l)})}$$. This is biased.
+**Pitfalls**:
+* Scale badly with dimensionality
+* Unless $$p$$ is close $$q$$ ($$p=q$$ gives the best performance), there will be a small number of dominant weights leading to a high variance. This is particularly evident in high-dimensions
+* This problem can be alleviated by resampling the weights
+
+#### Weighted resampling
+1. Draw $$N$$ samples $$\{x\}_N$$ from $$Q$$
+2. Constructing weights: $$w^{(n)} = \frac{\hat{p}(x^{(n)})}{\hat{q}(x^{(n)})}\Big/\sum_l \frac{\hat{p}(x^{(l)})}{\hat{q}(x^{(l)})}$$
+3. Subsample $$x$$ from $$\{x\}_N$$ w.p.t. $$\{w\}_N$$ 
+
+
+#### Particle filters
+* Apply the resampled importance sampling to a temporal high dimensional distribution $$p(x_1, \dots, x_t)$$. The problem can be reduced to finding a proposal distribution for an one-dimensional problem.
+* Goal is to yield samples from posterior $$p(X_t|Y_{1:t})$$
+![pf]({{site.url}}{{site.baseurl}}/assets/images/pf.JPG)
