--- a/_posts/2018-08-03-blog-mcmc.md
+++ b/_posts/2018-08-03-blog-mcmc.md
@@ -41,6 +41,7 @@ And it can be proved that the accpected samples follows $$p(x)$$.
 A different idea is to retain all the samples and re-weight them while computing their mean.
 $$E_p[f(x)] = \int f(x)p(x)dx = \int f(x) \frac{p(x)}{q(x)}q(x)dx  \approx \frac{1}{N} \sum_{n=1}^{N} f(x^{(n)}) \frac{p(x^{(n)})}{q(x^{(n)})}$$, where $$x^{(n)} \sim q(x)$$. This a an unbiased estimator.
 However, when we only have unnormalized distribution $$\hat{p}(x)$$, $$E_p[f(x)] \approx \sum_{n} f(x^{(n)})w^{(n)}$$, where $$w^{(n)} = \frac{\hat{p}(x^{(n)})}{\hat{q}(x^{(n)})}\Big/\sum_l \frac{\hat{p}(x^{(l)})}{\hat{q}(x^{(l)})}$$. This is biased.
+
 **Pitfalls**:
 * Scale badly with dimensionality
 * Unless $$p$$ is close $$q$$ ($$p=q$$ gives the best performance), there will be a small number of dominant weights leading to a high variance. This is particularly evident in high-dimensions
@@ -56,3 +57,19 @@ However, when we only have unnormalized distribution $$\hat{p}(x)$$, $$E_p[f(x)]
 * Apply the resampled importance sampling to a temporal high dimensional distribution $$p(x_1, \dots, x_t)$$. The problem can be reduced to finding a proposal distribution for an one-dimensional problem.
 * Goal is to yield samples from posterior $$p(X_t|Y_{1:t})$$
 ![pf]({{site.url}}{{site.baseurl}}/assets/images/pf.JPG)
+
+### Markov Chain Monte Carlo
+Instead of using a fixed proposal $$Q(x)$$ as the previous methods, we use $$Q(x^{\prime} |x)$$ where $$x^{\prime}$$ is the new state being sampled, and $$x$$ is the previous sample. So as $$x$$ changes, $$Q(x^{\prime} |x)$$ can also change. One of the most famous MCMC algorithm is Metropolis-Hastings algorithm.
+
+#### Metropolis-Hastings
+* Draws a sample $$x^{\prime}$$ from $$Q(x^{\prime} |x)$$
+* The new sample $$x^{\prime}$$ is accepted or rejected with some probability $$A(x^{\prime} |x)$$
+    * This acceptance probability is $$A(x^{\prime} |x) = \min(1, \frac{p(x^{\prime})Q(x|x^{\prime})}{p(x)Q(x^{\prime} |x)})$$
+    * $$A(x^{\prime} |x)$$ is like a ratio of importance sampling weights
+        * $$p(x^{\prime})Q(x|x^{\prime})$$ is the importance weight for $$x^{\prime}$$, $$p(x)Q(x^{\prime} |x)$$ is the importance weight for x.
+        * We divide the importance weight for $$x^{\prime}$$ by that of $$x$$
+        * Notice that we only need to compute $$p(x^{\prime})/p(x)$$ rather than $$p(x^{\prime})$$ or $$p(x)$$ separately
+    * $$A(x^{\prime} |x)$$ ensures that, after sufficiently many draws, our samples will come from the true distribution.
+
+**Steps for the algorithm:**
+![pf]({{site.url}}{{site.baseurl}}/assets/images/mh.JPG)
