--- a/_posts/2018-08-03-blog-mcmc.md
+++ b/_posts/2018-08-03-blog-mcmc.md
@@ -62,9 +62,9 @@ However, when we only have unnormalized distribution $$\hat{p}(x)$$, $$E_p[f(x)]
 Instead of using a fixed proposal $$Q(x)$$ as the previous methods, we use $$Q(x^{\prime} | x)$$ where $$x^{\prime}$$ is the new state being sampled, and $$x$$ is the previous sample. So as $$x$$ changes, $$Q(x^{\prime} | x)$$ can also change. One of the most famous MCMC algorithm is Metropolis-Hastings algorithm.
 
 #### Metropolis-Hastings
-* Draws a sample $$x^{\prime}$$ from $$ Q(x^{\prime} | x) $$
-* The new sample $$x^{\prime}$$ is accepted or rejected with some probability $$ A(x^{\prime} | x) $$
-    * This acceptance probability is $$ A(x^{\prime} | x) = \min(1, \frac{p(x^{\prime})Q(x | x^{\prime})}{p(x)Q(x^{\prime} | x)}) $$
+* Draws a sample $$x^{\prime}$$ from $$ Q(x^{\prime} ; x) $$
+* The new sample $$x^{\prime}$$ is accepted or rejected with some probability $$ A(x^{\prime} ; x) $$
+    * This acceptance probability is $$ A(x^{\prime} ; x) = \min(1, \frac{p(x^{\prime})Q(x ; x^{\prime})}{p(x)Q(x^{\prime} ; x)}) $$
     * $$A(x^{\prime} | x)$$ is like a ratio of importance sampling weights
         * $$p(x^{\prime})Q(x | x^{\prime})$$ is the importance weight for $$x^{\prime}$$, $$p(x)Q(x^{\prime} | x)$$ is the importance weight for x.
         * We divide the importance weight for $$x^{\prime}$$ by that of $$x$$
