--- a/_posts/2018-08-03-blog-mcmc.md
+++ b/_posts/2018-08-03-blog-mcmc.md
@@ -65,11 +65,11 @@ Instead of using a fixed proposal $$Q(x)$$ as the previous methods, we use $$Q(x
 * Draws a sample $$x^{\prime}$$ from $$ Q(x^{\prime} ; x) $$
 * The new sample $$x^{\prime}$$ is accepted or rejected with some probability $$ A(x^{\prime} ; x) $$
     * This acceptance probability is $$ A(x^{\prime} ; x) = \min(1, \frac{p(x^{\prime})Q(x ; x^{\prime})}{p(x)Q(x^{\prime} ; x)}) $$
-    * $$A(x^{\prime} | x)$$ is like a ratio of importance sampling weights
-        * $$p(x^{\prime})Q(x | x^{\prime})$$ is the importance weight for $$x^{\prime}$$, $$p(x)Q(x^{\prime} | x)$$ is the importance weight for x.
+    * $$A(x^{\prime} ; x)$$ is like a ratio of importance sampling weights
+        * $$p(x^{\prime})Q(x ; x^{\prime})$$ is the importance weight for $$x^{\prime}$$, $$p(x)Q(x^{\prime} ; x)$$ is the importance weight for x.
         * We divide the importance weight for $$x^{\prime}$$ by that of $$x$$
         * Notice that we only need to compute $$p(x^{\prime})/p(x)$$ rather than $$p(x^{\prime})$$ or $$p(x)$$ separately
-    * $$A(x^{\prime} | x)$$ ensures that, after sufficiently many draws, our samples will come from the true distribution.
+    * $$A(x^{\prime} ; x)$$ ensures that, after sufficiently many draws, our samples will come from the true distribution.
 
 **Steps for the algorithm:**
 ![pf]({{site.url}}{{site.baseurl}}/assets/images/mh.JPG)
