--- a/_posts/2018-08-03-blog-mcmc.md
+++ b/_posts/2018-08-03-blog-mcmc.md
@@ -72,4 +72,9 @@ Instead of using a fixed proposal $$Q(x)$$ as the previous methods, we use $$Q(x
     * $$A(x^{\prime} ; x)$$ ensures that, after sufficiently many draws, our samples will come from the true distribution.
 
 **Steps for the algorithm:**
+First we have a burn-in stage: while samples have not converged, do:
 ![pf]({{site.url}}{{site.baseurl}}/assets/images/mh.JPG)
+Then, we take samples using the same procedure as above, and keep those samples.
+
+#### Gibbs sampling
+Gibbs Sampling is an MCMC algorithm that samples each random variable of a graphical model, one at a time. GS is a special case of the MH algorithm.
