add new message

--- a/_posts/2018-08-03-blog-mcmc.md
+++ b/_posts/2018-08-03-blog-mcmc.md
@@ -33,7 +33,7 @@ How to generate samples given a distribution $$p(x)$$? How to convert samples fr
 
 And it can be proved that the accpected samples follows $$p(x)$$.
 
-**Pitfalls:** 
+#### Pitfalls:
 * Scale badly with dimensionality (acceptance rate exponentially decreases)
 * If $$Q(x)$$ is chosen badly (if $$p$$ and $$Q$$ both are Gaussian), acceptance rate is really low
 
@@ -42,7 +42,7 @@ A different idea is to retain all the samples and re-weight them while computing
 $$E_p[f(x)] = \int f(x)p(x)dx = \int f(x) \frac{p(x)}{q(x)}q(x)dx  \approx \frac{1}{N} \sum_{n=1}^{N} f(x^{(n)}) \frac{p(x^{(n)})}{q(x^{(n)})}$$, where $$x^{(n)} \sim q(x)$$. This a an unbiased estimator.
 However, when we only have unnormalized distribution $$\hat{p}(x)$$, $$E_p[f(x)] \approx \sum_{n} f(x^{(n)})w^{(n)}$$, where $$w^{(n)} = \frac{\hat{p}(x^{(n)})}{\hat{q}(x^{(n)})}\Big/\sum_l \frac{\hat{p}(x^{(l)})}{\hat{q}(x^{(l)})}$$. This is biased.
 
-**Pitfalls**:
+#### Pitfalls:
 * Scale badly with dimensionality
 * Unless $$p$$ is close $$q$$ ($$p=q$$ gives the best performance), there will be a small number of dominant weights leading to a high variance. This is particularly evident in high-dimensions
 * This problem can be alleviated by resampling the weights
