add new message

--- a/_posts/2019-1-16-blog-ESI.md
+++ b/_posts/2019-1-16-blog-ESI.md
@@ -11,5 +11,4 @@ categories:
 
 ## Physiology
 ### Source of EEG
-* The first a few pages of "François Grimbert, Olivier Faugeras. Analysis of Jansen’s model of a single cortical column. [Research Report] RR-5597, INRIA. 2006, pp.34. <inria-00070410>"
-<a href="https://rachel-sunrui.github.io/assets/Resume_afterPhD.pdf"></a>
+* The first a few pages of "François Grimbert, Olivier Faugeras. Analysis of Jansen’s model of a single cortical column. [Research Report](https://rachel-sunrui.github.io/assets/Resume_afterPhD.pdf) RR-5597, INRIA. 2006, pp.34. <inria-00070410>"
