add new message

--- a/_posts/2019-1-16-blog-ESI.md
+++ b/_posts/2019-1-16-blog-ESI.md
@@ -11,4 +11,10 @@ categories:
 
 ## Physiology
 ### Source of EEG
-* The first a few pages of "François Grimbert, Olivier Faugeras. Analysis of Jansen’s model of a single cortical column. [Research Report](https://rachel-sunrui.github.io/assets/Resume_afterPhD.pdf) RR-5597, INRIA. 2006, pp.34. <inria-00070410>"
+* The first a few pages of "François Grimbert, Olivier Faugeras. Analysis of Jansen’s model of a single cortical column. [Research Report](https://rachel-sunrui.github.io/assets/Resume_afterPhD.pdf) RR-5597, INRIA. 2006, pp.34."
+* From [scholarpedia](http://www.scholarpedia.org/article/Electroencephalogram):
+    * Current consists of movement of positive and negative ions in opposite directions, but the total charge in any mesoscopic tissue volume is essentially zero. 
+    * Height: 2-5 mm
+    * Diameter: 30 $$\mu m$$ to 1 mm (But I think from other references, the diameter is ususally on the order of 100 $$\mu m$$)
+* From [wikipedia]:(https://en.wikipedia.org/wiki/Cortical_column)
+    Various estimates suggest there are 50 to 100 cortical minicolumns in a hypercolumn, each comprising around 80 neurons. Their role is best understood as 'functional units of information processing.
