add new message

--- a/_posts/2019-1-16-blog-ESI.md
+++ b/_posts/2019-1-16-blog-ESI.md
@@ -16,5 +16,50 @@ categories:
     * Current consists of movement of positive and negative ions in opposite directions, but the total charge in any mesoscopic tissue volume is essentially zero. 
     * Height: 2-5 mm
     * Diameter: 30 $$\mu m$$ to 1 mm (But I think from other references, the diameter is ususally on the order of 100 $$\mu m$$)
-* From [wikipedia]:(https://en.wikipedia.org/wiki/Cortical_column)
+* From [wikipedia](https://en.wikipedia.org/wiki/Cortical_column):
     Various estimates suggest there are 50 to 100 cortical minicolumns in a hypercolumn, each comprising around 80 neurons. Their role is best understood as 'functional units of information processing.
+
+### EEG bands ([Copy from ref](https://www.medicine.mcgill.ca/physio/vlab/biomed_signals/eeg_n.htm))
+* Delta (1 to 4 Hz): It tends to be the highest in amplitude and the slowest waves. It is normal as the dominant rhythm in infants up to one year and in stages 3 and 4 of sleep.
+* Theta (4 to 8 Hz): It is perfectly normal in children up to 13 years and in sleep but abnormal in awake adults. 
+* Alpha (8 to 13 Hz): Is usually best seen in the posterior regions of the head on each side, being higher in amplitude on the dominant side. It appears when closing the eyes and relaxing, and disappears when opening the eyes or alerting by any mechanism (thinking, calculating). It is the major rhythm seen in normal relaxed adults. It is present during most of life especially after the thirteenth year.
+* Beta (greater than 13 Hz): It is usually seen on both sides in symmetrical distribution and is most evident frontally. It may be absent or reduced in areas of cortical damage. It is generally regarded as a normal rhythm. It is the dominant rhythm in patients who are alert or anxious or have their eyes open.
+* Very high frequencies (typically 30 to 40 Hz) are referred to as gamma activity.
+
+
+## Imaging technique (most materials come from wikipedia)
+** Functional imaging technique** 
+#### Functional magnetic resonance imaging: 
+* fMRI measures brain activity by detecting changes associated with blood flow. When an area of the brain is in use, blood flow to that region also increases.
+* The primary form of fMRI uses the blood-oxygen-level dependent (BOLD) contrast.
+* The technique can localize activity to within **millimeters** but, using standard techniques, no better than within a window of **a few seconds**.
+
+#### Functional near-infrared spec·tros·co·py
+* fNIRS is a non-invasive imaging method involving the quantification of chromophore concentration resolved from the measurement of near infrared (NIR) light attenuation or temporal or phasic changes.
+* NIR spectrum light takes advantage of the optical window in which skin, tissue, and bone are mostly transparent to NIR light in the spectrum of **700–900 nm**, while hemoglobin (Hb) and deoxygenated-hemoglobin (deoxy-Hb) are stronger absorbers of light. 
+* fNIRS has several advantages in cost and portability over fMRI, but cannot be used to measure cortical activity more than 4 cm deep due to limitations in light emitter power and has more limited spatial resolution.
+
+#### Positron-emission tomography
+* The system detects pairs of gamma rays emitted indirectly by a positron-emitting radionuclide, most commonly fluorine-18, which is introduced into the body on a biologically active molecule called a radioactive tracer. Three-dimensional images of tracer concentration within the body are then constructed by computer analysis. In modern PET-CT scanners, three-dimensional imaging is often accomplished with the aid of a CT X-ray(that is combine with antomical imaging) scan performed on the patient during the same session, in the same machine.
+* Brain positron emission tomography is a form of positron emission tomography (PET) that is used to measure brain metabolism and the distribution of exogenous radiolabeled chemical agents throughout the brain. 
+* Usually used for cancers/tumours (consumes glucose) and dementias (because PET is good for measure metabolism)
+* 10s of seconds to minutes of temporal resolution; high cost; because the radioactivity decays rapidly, it is limited to monitoring short tasks.
+
+** Antomical imaging technique **
+#### Computed tomography scan
+* Many X-ray measurements taken from different angles to produce cross-sectional (tomographic) images (virtual "slices") of specific areas of a scanned object, allowing the user to see inside the object without cutting.
+
+
+
+
+
+## Forward model
+### Quasi-static Maxwell equation
+* Haus, Hermann A., and James R. Melcher. “Electromagnetic Fields and Energy - Chapter 3: Introduction to Electroquasistatics and Magnetoquasistatics.” Electromagnetic Fields and Energy, 2008, http://ocw.mit.edu/.
+* Malmivuo, Jaakko, and Robert Plonsey. “Bioelectromagnetism.8.Source-Field Models.” Bioelectromagnetism, Oxford University Press, 1995, pp. 148–58.
+
+### How to calcualte B.E.M model
+* Must read reference: STATISTICAL PARAMETRIC MAPPING: THE ANALYSIS OF FUNCTIONAL BRAIN IMAGES, Chapter 28
+* Popular reference: 
+    * Mosher, John C., Richard M. Leahy, and Paul S. Lewis. "EEG and MEG: forward solutions for inverse methods." IEEE Transactions on Biomedical Engineering 46.3 (1999): 245-259.
+    * He, Bin, et al. "Electric dipole tracing in the brain by means of the boundary element method and its accuracy." IEEE Transactions on Biomedical Engineering 6 (1987): 406-414.
