--- a/_posts/2019-1-16-blog-ESI.md
+++ b/_posts/2019-1-16-blog-ESI.md
@@ -9,9 +9,9 @@ categories:
 ---
 
 
-## Physiology
+## 1. Physiology
 ### Source of EEG
-* The first a few pages of "François Grimbert, Olivier Faugeras. Analysis of Jansen’s model of a single cortical column. [Research Report](https://rachel-sunrui.github.io/assets/Resume_afterPhD.pdf) RR-5597, INRIA. 2006, pp.34."
+* The first a few pages of "François Grimbert, Olivier Faugeras. Analysis of Jansen’s model of a single cortical column. [Research Report](https://rachel-sunrui.github.io/assets/Single_cortical_column.pdf) RR-5597, INRIA. 2006, pp.34."
 * From [scholarpedia](http://www.scholarpedia.org/article/Electroencephalogram):
     * Current consists of movement of positive and negative ions in opposite directions, but the total charge in any mesoscopic tissue volume is essentially zero. 
     * Height: 2-5 mm
@@ -27,33 +27,44 @@ categories:
 * Very high frequencies (typically 30 to 40 Hz) are referred to as gamma activity.
 
 
-## Imaging technique (most materials come from wikipedia)
-** Functional imaging technique** 
-#### Functional magnetic resonance imaging: 
+## 2. Imaging technique (most materials come from wikipedia)
+**Functional imaging technique** 
+### Functional magnetic resonance imaging: 
 * fMRI measures brain activity by detecting changes associated with blood flow. When an area of the brain is in use, blood flow to that region also increases.
 * The primary form of fMRI uses the blood-oxygen-level dependent (BOLD) contrast.
 * The technique can localize activity to within **millimeters** but, using standard techniques, no better than within a window of **a few seconds**.
 
-#### Functional near-infrared spec·tros·co·py
+### Functional near-infrared spec·tros·co·py
 * fNIRS is a non-invasive imaging method involving the quantification of chromophore concentration resolved from the measurement of near infrared (NIR) light attenuation or temporal or phasic changes.
 * NIR spectrum light takes advantage of the optical window in which skin, tissue, and bone are mostly transparent to NIR light in the spectrum of **700–900 nm**, while hemoglobin (Hb) and deoxygenated-hemoglobin (deoxy-Hb) are stronger absorbers of light. 
 * fNIRS has several advantages in cost and portability over fMRI, but cannot be used to measure cortical activity more than 4 cm deep due to limitations in light emitter power and has more limited spatial resolution.
 
-#### Positron-emission tomography
+### Positron-emission tomography
 * The system detects pairs of gamma rays emitted indirectly by a positron-emitting radionuclide, most commonly fluorine-18, which is introduced into the body on a biologically active molecule called a radioactive tracer. Three-dimensional images of tracer concentration within the body are then constructed by computer analysis. In modern PET-CT scanners, three-dimensional imaging is often accomplished with the aid of a CT X-ray(that is combine with antomical imaging) scan performed on the patient during the same session, in the same machine.
 * Brain positron emission tomography is a form of positron emission tomography (PET) that is used to measure brain metabolism and the distribution of exogenous radiolabeled chemical agents throughout the brain. 
 * Usually used for cancers/tumours (consumes glucose) and dementias (because PET is good for measure metabolism)
 * 10s of seconds to minutes of temporal resolution; high cost; because the radioactivity decays rapidly, it is limited to monitoring short tasks.
 
-** Antomical imaging technique **
-#### Computed tomography scan
-* Many X-ray measurements taken from different angles to produce cross-sectional (tomographic) images (virtual "slices") of specific areas of a scanned object, allowing the user to see inside the object without cutting.
+### Single-photon emission computed tomography
+* The gamma-emitting tracer is to be taken up by brain tissue in a manner proportional to brain blood flow, in turn allowing cerebral blood flow to be assessed with the nuclear gamma camera.
+
+**Antomical imaging technique**
+### Computed tomography scan
+* Many X-ray(1 pm wave length) measurements taken from different angles to produce cross-sectional (tomographic) images (virtual "slices") of specific areas of a scanned object, allowing the user to see inside the object without cutting.
+* CT images of the head are used to investigate and diagnose brain injuries and other neurological conditions, as well as other conditions involving the skull or sinuses.
+
+### Magnetic resonance imaging
+* The person is positioned within an MRI scanner that forms a strong magnetic field around the area to be imaged. In most medical applications, protons (hydrogen atoms) in tissues containing water molecules create a signal that is processed to form an image of the body. The contrast between different tissues is determined by the rate at which excited atoms return to the equilibrium state. 
+* The contrast provided between grey and white matter makes MRI the best choice for many conditions.
+
+### Ultrasound
+* Ultrasound refers to sound waves with frequencies which are higher than those audible to humans (>20,000 Hz). Ultrasonic images, also known as sonograms, are made by sending pulses of ultrasound into tissue using a probe. The ultrasound pulses echo off tissues with different reflection properties and are recorded and displayed as an image.
+* It is most commonly performed on infants, whose skulls have not completely formed. 
 
 
 
 
-
-## Forward model
+## 3. Forward model
 ### Quasi-static Maxwell equation
 * Haus, Hermann A., and James R. Melcher. “Electromagnetic Fields and Energy - Chapter 3: Introduction to Electroquasistatics and Magnetoquasistatics.” Electromagnetic Fields and Energy, 2008, http://ocw.mit.edu/.
 * Malmivuo, Jaakko, and Robert Plonsey. “Bioelectromagnetism.8.Source-Field Models.” Bioelectromagnetism, Oxford University Press, 1995, pp. 148–58.
