--- a/_posts/2019-01-16-blog-ESI.md
+++ b/_posts/2019-01-16-blog-ESI.md
@@ -74,3 +74,25 @@ categories:
 * Popular reference: 
     * Mosher, John C., Richard M. Leahy, and Paul S. Lewis. "EEG and MEG: forward solutions for inverse methods." IEEE Transactions on Biomedical Engineering 46.3 (1999): 245-259.
     * He, Bin, et al. "Electric dipole tracing in the brain by means of the boundary element method and its accuracy." IEEE Transactions on Biomedical Engineering 6 (1987): 406-414.
+
+
+## 4. Inverse method:
+### Notations:
+* $$L_s$$: leadfield matrix for the sth dipole
+* $$\hat{j}$$: the reconstruction
+* $$W$$: the inverse operator or the weighting matrix, depend on the definition under different methods.
+
+### Spatial scanning 
+1. Beamformer: Output power of the reconstruction at each voxel is minimized.
+    ![svd]({{site.url}}{{site.baseurl}}/assets/images/sl_lcmv.png)
+2. Match filter
+
+### Distributed model
+1. LORETA: 
+2. exact, zero error localization:
+In “R.D. Pascual-Marqui: Discrete, 3D distributed, linear imaging methods of electric neuronal activity. Part 1: exact, zero error localization. arXiv:0710.3341 [math-ph], 2007-October-17, http://arxiv.org/pdf/0710.3341”, it proved that the derivative of $$\hat{js}$$ w.r.t. $$Ls$$ is zero, if the reconstruction follows the following equation:
+
+sLORETA and eLORETA both belongs to this family. 
+
+* sLORETA: Constrain the covariance of the reconstruction matrix to be identity matrix./ Reweight the result that the resolution matrix is identity. 
+3. eLORETA: Assume the covariance of the reconstruction is a matrix $$W$$ (similar to weighted minimum norm). And find $$W$$ through an optimization technique such that $$W$$ and $$T$$ satisify the zero-error-family equation.
