--- a/_posts/2019-01-16-blog-ESI.md
+++ b/_posts/2019-01-16-blog-ESI.md
@@ -54,6 +54,7 @@ categories:
 * CT images of the head are used to investigate and diagnose brain injuries and other neurological conditions, as well as other conditions involving the skull or sinuses.
 
 ### Magnetic resonance imaging
+* Nice video on MRI (https://www.youtube.com/watch?v=djAxjtN_7VE)
 * The person is positioned within an MRI scanner that forms a strong magnetic field around the area to be imaged. In most medical applications, protons (hydrogen atoms) in tissues containing water molecules create a signal that is processed to form an image of the body. The contrast between different tissues is determined by the rate at which excited atoms return to the equilibrium state. 
 * The contrast provided between grey and white matter makes MRI the best choice for many conditions.
 
@@ -65,6 +66,7 @@ categories:
 
 
 ## 3. Forward model
+[My notes](https://rachel-sunrui.github.io/assets/ECD.pdf) from dipole modeling to BEM calculation.
 ### Quasi-static Maxwell equation
 * Haus, Hermann A., and James R. Melcher. “Electromagnetic Fields and Energy - Chapter 3: Introduction to Electroquasistatics and Magnetoquasistatics.” Electromagnetic Fields and Energy, 2008, http://ocw.mit.edu/.
 * Malmivuo, Jaakko, and Robert Plonsey. “Bioelectromagnetism.8.Source-Field Models.” Bioelectromagnetism, Oxford University Press, 1995, pp. 148–58.
