--- a/_posts/2019-02-04-blog-stat.md
+++ b/_posts/2019-02-04-blog-stat.md
@@ -10,6 +10,28 @@ categories:
 ## Statistical power
 * From the ```The_Essential_Guide_to_Effect_Size```
 * Defined as the probability that it will reject a false null hypothesis
-* Inversely related to the probability of making a Type II error (The nul is wrong, but did not reject it $$\beta$$). In short, power = 1 – $$\beta$$.
+* Inversely related to the probability of making a Type II error (The nul is wrong, but did not reject it $$\beta$$ -- $$\beta$$ is the probability of the test data lies in the rejection region). In short, power = 1 – $$\beta$$.
 * Statistical power is affected chiefly by the size of the effect and the size of the sample used to detect it. Bigger effects are easier to detect than smaller effects, while large samples offer greater test sensitivity than small samples.
 
+## Sample size
+* https://www.statisticshowto.datasciencecentral.com/probability-and-statistics/find-sample-size/
+* Definition: the part of the population you chose from the whole population for your study.
+* For small sampling, there could be uncertainties (sampling error). It is usually measured by confidence interval. It means if you were to repeat your survey over and over, 90% of the time your would get the same results.
+* Cochran’s Sample Size Formula 
+* Lecture 9
+
+## Effect size
+我们常常用T test来根据样本均值比较两个总体的均值。
+
+p value可以反映出它们是否相同（的概率）；而effect size是反映它们有多么不相同。可以用Cohen's d来计算effect size。
+
+d=X¯1−X¯2SDpool
+也就是均值的差除以标准差。
+
+一般来说
+
+d=0.2：effect size较小
+
+d=0.5：effect size适中
+
+d=0.8：effect size较大
