--- a/_posts/2018-07-06-blog-nn.md
+++ b/_posts/2018-07-06-blog-nn.md
@@ -41,7 +41,10 @@ categories:
 * Nestorov's accelerated gradient: first extended the previous step and calcualted the gradient at the new place
 
 ### Initialization
-
+The general idea is making the variance of the output close to 1. We usually normalize the input variance to be zero mean and variance 1 and the mean of the weights are initialized to be 0, and based on this, the variance of the weights can be calcualted.
+* **LeCun and Xavier initialization**: More suitable for linear/sigmoid activation. LeCun only thinks about the influence of the forward pass, so $$Var(w) = 1/fanIn$$, and Xavier considers both forward and backward pass, so $$Var(w) = \frac{2}{fanIn+fanOut}$$
+* **Kaiming initialization**: ReLU activation was used, so $$Var(w) = 2/fanIn$$ or $$Var(w) = 2/fanOut$$
+* **Dynamical isometry**: This line of research looks at the the singular values of the input-output Jacobian matrix and trying to make that all 1. (My understanding is that in this way, the gradent of output over input is on the same scale, so we can use one learning rate to update all teh output feature and have a good, stable reasult). We could use all orthogonal matrices as the inilization weights for sigmoid activation, but dynamical isometry properity cannot be observed if using orthogonal matrices and ReLU.
 
 ### Deconvolution
 [Good visualization](https://github.com/vdumoulin/conv_arithmetic)
