--- a/_posts/2020-02-08-blog-opnn.md
+++ b/_posts/2020-02-08-blog-opnn.md
@@ -1,6 +1,14 @@
-` 
-Sun, Ruoyu. "Optimization for deep learning: theory and algorithms." arXiv preprint arXiv:1912.08957 (2019).
-`
+---
+title: 'Studies notes for optimization for deep learning'
+date: 2020-02-10
+permalink: /posts/2020/02/opnn/
+tags:
+  - neural networks
+categories:
+  - Machine Learning
+---
+
+` Sun, Ruoyu. "Optimization for deep learning: theory and algorithms." arXiv preprint arXiv:1912.08957 (2019).`
 
 ## Introduction
 *  One major goal is to understanding how the neural-net structure (the parameterization by concatenation of many variables) aﬀects the design and analysis of optimization algorithms, which can potentially go beyond supervised learning. 
