--- a/_posts/2020-02-25-blog-DTI.md
+++ b/_posts/2020-02-25-blog-DTI.md
@@ -1,19 +1,19 @@
 ---
 title: 'Useful links for DTI processing'
-date: 2019-09-05
+date: 2020-02-25
 permalink: /posts/2020/2/DTI/
 categories:
   - Tools
   - Neuroscience
 ---
 
-### From DICOM to NfiTi
-DICOM is usually the data format downloaded form the scanner or the PACS system. (PACS system is an archiving system widely used in hospitals that data can be transdered from the scanner into the system via Network) However, for research purposes, NfiTi (.nii) format is used, so we need to tranform DICOM data to NfiTi. [More info see Li et al](https://rachel-sunrui.github.io/assets/Li_et_al_DICOM2NIfTI.pdf)
-
-
-DICOM is saved as in a 2D protocol. A lot of important infomation is saved in the DICOM header in order to get the 3D (T1 anatonmy scan) or 4D (fMRI or DTI) NfiTi images. Below lists some important header tags that are important:
+### DICOM to headers
+DICOM is usually the data format downloaded form the scanner or the PACS system. (PACS system is an archiving system widely used in hospitals that data can be transdered from the scanner into the system via Network). DICOM is saved as in a 2D protocol. A lot of important infomation is saved in the DICOM header in order to get the 3D (T1 anatonmy scan) or 4D (fMRI or DTI) NfiTi images. Below lists some important header tags that are important:
 1. **The number of slices:**
-A lot of cases, this tag could be tested by loading all of the files and then counting the slices for 3D images. For 4d sequences like DTI and fMRI, where you have a set of volumes acquired many times, you also need to look at the DICOM *SliceLocation* field, which tells you the slice's position in the volume (in physical space units). The number of unique slice locations is the 'official' DICOM indication of the number of slices. *The number of direction* is defined by the gradient file code. So, for grad file code 865, the number of directions is 30. This is the total number of non-collinear directions you used, not including the b0s. If Bob defined the protocol, the number of directions can be guessed from the protocol name stored in the header (info.SeriesDescription). MORE IMPORTANTLY -- we should never have to specify this, preprocessing script should derive this information from the grad file. *Copied from [Number of slices section](https://web.stanford.edu/group/vista/cgi-bin/wiki/index.php/DTI_Preprocessing_User_Manual)*
+  * This tag could be tested by loading all of the files and then counting the slices for 3D images. 
+  * For 4d sequences like DTI and fMRI, where you have a set of volumes acquired many times, you also need to look at the DICOM *SliceLocation* field, which tells you the slice's position in the volume (in physical space units). The number of unique slice locations is the 'official' DICOM indication of the number of slices. 
+  * *The number of direction* is defined by the gradient file code. So, for grad file code 865, the number of directions is 30. This is the total number of non-collinear directions you used, not including the b0s. If Bob defined the protocol, the number of directions can be guessed from the protocol name stored in the header (info.SeriesDescription). MORE IMPORTANTLY -- we should never have to specify this, preprocessing script should derive this information from the grad file. 
+  * *Copied from [Number of slices section](https://web.stanford.edu/group/vista/cgi-bin/wiki/index.php/DTI_Preprocessing_User_Manual)*
 
 2. **qform and sform:**
 *qform* is used to transfer the image from the voxel space (i,j,k) to scanner space (x,y,z). *sform* is an affine transform between coordinate systems. For more information on how these two values are used in the transformation, please check [nifti1.h header documentation](https://nifti.nimh.nih.gov/nifti-1/documentation/nifti1fields/nifti1fields_pages/qsform.html).
@@ -24,6 +24,44 @@ A lot of cases, this tag could be tested by loading all of the files and then co
   * The value of b is selected by the operator prior to imaging. Larger b shows progressively more diffusion weighting but also more noise. Mechanical vibration artifacts may also be a problem as b-values are increased.  
   * As a practical matter, most routine clinical DWI currently use b-values between 0 and 1000, with slightly lower values being used outside the central nervous system. 
   * *Copied from [mriquestions](http://mriquestions.com/what-is-the-b-value.html)*
+
+
+### DTI basics
+1. B0 image and T2 shine-through:
+The relationship between b-value and the measurement $$S_{DWI}$$ is 
+
+$$B_{DWI} = B_{0}exp(-bB_{ADC})$$
+
+Because the sequence used for DWI will also cause T2 changes, in practice, we would usually measure a signal with b-value of 0 to account for the T2 shine-through effect and calculate the ADC(apparent diffusion coefficient). *[Ref1,](www.diffusion-imaging.com/2013/02/why-do-we-acquire-b0-images-in-dti-exams.html
+)[Ref2](https://rachel-sunrui.github.io/assets/Dumbo_guide_DTI.pdf)*
+
+2. Number Of Images In Mosaic
+
+### DICOM to NifTi
+However, for research purposes, NfiTi (.nii) format is used, so we need to tranform DICOM data to NfiTi. [More info see Li et al](https://rachel-sunrui.github.io/assets/Li_et_al_DICOM2NIfTI.pdf)
+
+[`dcm2niix`](https://github.com/rordenlab/dcm2niix) can prepare the NifTi data for FSL processing. It also has a GUI intergrated into MicroNGL. It should generate .nii.gz, .bval, and .bvecs files and it makes sure all the images and vectors are in the same coordinate space (the RADIOLOGICAL orientation).
+
+However, some issue may happen because of the anonymization process. For instance,
+  * https://github.com/rordenlab/dcm2niix/issues/275#issuecomment-467114004
+  * "I suspect someone was over aggressive in anonymizing the data, and removed all the private tags." 
+  * "To determine the number of slices in a mosaic, the DICOM header needs to report the Number Of Images In Mosaic (0019,100A) tag or include include a CSA Image Header Info (0029,1010) tag with the NumberOfImagesInMosaic field"
+  * https://www.nitrc.org/forum/forum.php?thread_id=10016&forum_id=4703
+  * The link above says how old dcm2nii is estimating the (0019, 100A) when it is missing. But it is very inaccurate.
+
+
+
+
+### Steps for DTI processing
+* FSL references, important ones, I need to read those first
+  * http://wikis.la.utexas.edu/imagelab/book/how-prepare-your-dti-images-diffusivity-analysis.html
+  * https://www.cabi.gatech.edu/CABI/archives/resources/dti-analysis/
+  * http://justinblaber.org/brief-introduction-to-dwmri/ I finished the part before step 4.
+
+* Some other useful tutorials:
+  * Use spm to read DICOM header: https://www.na-mic.org/wiki/NAMIC_Wiki:DTI:DICOM_for_DWI_and_DTI
+  * I need to read part 5 of this. https://web.stanford.edu/group/vista/cgi-bin/wiki/index.php/DTI_Preprocessing
+* Also https://web.stanford.edu/group/vista/cgi-bin/wiki/index.php/DTI_Preprocessing_User_Manual
 
 
 
