--- a/_posts/2020-02-25-blog-DTI.md
+++ b/_posts/2020-02-25-blog-DTI.md
@@ -25,6 +25,9 @@ DICOM is usually the data format downloaded form the scanner or the PACS system.
   * As a practical matter, most routine clinical DWI currently use b-values between 0 and 1000, with slightly lower values being used outside the central nervous system. 
   * *Copied from [mriquestions](http://mriquestions.com/what-is-the-b-value.html)*
 
+4. **Number Of Images In Mosaic:**
+Siemens stores 3D images in a 2D grid where at each grid point, there is another 2D image. So the number of mosaic field is used to reconstruct the 3D image from this 2D grid. https://nipy.org/nibabel/dicom/dicom_mosaic.html
+
 
 ### DTI basics
 1. B0 image and T2 shine-through:
@@ -32,10 +35,10 @@ The relationship between b-value and the measurement $$S_{DWI}$$ is
 
 $$B_{DWI} = B_{0}exp(-bB_{ADC})$$
 
-Because the sequence used for DWI will also cause T2 changes, in practice, we would usually measure a signal with b-value of 0 to account for the T2 shine-through effect and calculate the ADC(apparent diffusion coefficient). *[Ref1,](www.diffusion-imaging.com/2013/02/why-do-we-acquire-b0-images-in-dti-exams.html
+  Because the sequence used for DWI will also cause T2 changes, in practice, we would usually measure a signal with b-value of 0 to account for the T2 shine-through effect and calculate the ADC(apparent diffusion coefficient). *[Ref1,](www.diffusion-imaging.com/2013/02/why-do-we-acquire-b0-images-in-dti-exams.html
 )[Ref2](https://rachel-sunrui.github.io/assets/Dumbo_guide_DTI.pdf)*
 
-2. Number Of Images In Mosaic
+
 
 ### DICOM to NifTi
 However, for research purposes, NfiTi (.nii) format is used, so we need to tranform DICOM data to NfiTi. [More info see Li et al](https://rachel-sunrui.github.io/assets/Li_et_al_DICOM2NIfTI.pdf)
@@ -57,6 +60,7 @@ However, some issue may happen because of the anonymization process. For instanc
   * http://wikis.la.utexas.edu/imagelab/book/how-prepare-your-dti-images-diffusivity-analysis.html
   * https://www.cabi.gatech.edu/CABI/archives/resources/dti-analysis/
   * http://justinblaber.org/brief-introduction-to-dwmri/ I finished the part before step 4.
+  * https://www.youtube.com/watch?v=zp0EOuKO3O0&t=2s
 
 * Some other useful tutorials:
   * Use spm to read DICOM header: https://www.na-mic.org/wiki/NAMIC_Wiki:DTI:DICOM_for_DWI_and_DTI
