--- a/_posts/2020-02-25-blog-DTI.md
+++ b/_posts/2020-02-25-blog-DTI.md
@@ -7,7 +7,7 @@ categories:
   - Neuroscience
 ---
 
-### DICOM to headers
+### DICOM headers
 DICOM is usually the data format downloaded form the scanner or the PACS system. (PACS system is an archiving system widely used in hospitals that data can be transdered from the scanner into the system via Network). DICOM is saved as in a 2D protocol. A lot of important infomation is saved in the DICOM header in order to get the 3D (T1 anatonmy scan) or 4D (fMRI or DTI) NfiTi images. Below lists some important header tags that are important:
 1. **The number of slices:**
   * This tag could be tested by loading all of the files and then counting the slices for 3D images. 
@@ -28,6 +28,34 @@ DICOM is usually the data format downloaded form the scanner or the PACS system.
 4. **Number Of Images In Mosaic:**
 Siemens stores 3D images in a 2D grid where at each grid point, there is another 2D image. So the number of mosaic field is used to reconstruct the 3D image from this 2D grid. https://nipy.org/nibabel/dicom/dicom_mosaic.html
 
+5. Toolbox: `pydicom`
+This is a python package and can edits DICOM header. Some examples are:
+```
+# add new tag
+ds = pydicom.dcmread(fname)
+ds.add_new(0x0019100A, 'US', 37)
+ds.save_as(fname)
+# Change tag
+ds.Manufacture='x' # change this tag to 'x'
+```
+Notes: Use the code above, I added "Number of Mosaic" tag into the dicom. But dcm2niix still cannot read this tag. I am not sure if I add this in a wrong way. And also, I cannot name this new tag. The name of it remains as "private tag"
+```
+# Add dictionary
+from pydicom.datadict import DicomDictionary, keyword_dict
+from pydicom.dataset import Dataset
+
+new_dict_items = {0x0019100A: ('US', '1', "Number Of Images In Mosaic", '', 'NumberOfImagesInMosaic'),}
+# Update the dictionary itself
+DicomDictionary.update(new_dict_items)
+# Update the reverse mapping from name to tag
+new_names_dict = dict([(val[4], tag) for tag, val in
+                       new_dict_items.items()])
+keyword_dict.update(new_names_dict)
+# Test that it is working
+ds = Dataset()  # or could get one from dcmread, etc
+ds.NumberOfImagesInMosaic = 37
+```
+Notes: the outcome of this code is the same as the previous one -- a new tag named as 'private tag' located at (0019, 100a).The change of the dictionary will be gone once exit python. 
 
 ### DTI basics
 1. B0 image and T2 shine-through:
@@ -43,7 +71,10 @@ $$B_{DWI} = B_{0}exp(-bB_{ADC})$$
 ### DICOM to NifTi
 However, for research purposes, NfiTi (.nii) format is used, so we need to tranform DICOM data to NfiTi. [More info see Li et al](https://rachel-sunrui.github.io/assets/Li_et_al_DICOM2NIfTI.pdf)
 
-[`dcm2niix`](https://github.com/rordenlab/dcm2niix) can prepare the NifTi data for FSL processing. It also has a GUI intergrated into MicroNGL. It should generate .nii.gz, .bval, and .bvecs files and it makes sure all the images and vectors are in the same coordinate space (the RADIOLOGICAL orientation).
+[dcm2niix](https://github.com/rordenlab/dcm2niix) can prepare the NifTi data for FSL processing. It also has a GUI intergrated into MicroNGL. It should generate .nii.gz, .bval, and .bvecs files and it makes sure all the images and vectors are in the same coordinate space (the RADIOLOGICAL orientation).
+
+[dicm2nii](https://github.com/xiangruili/dicm2nii) is a Matlab toolbox developed in recent years that is a good resource to learn about DICOM and nii formats.
+
 
 However, some issue may happen because of the anonymization process. For instance,
   * https://github.com/rordenlab/dcm2niix/issues/275#issuecomment-467114004
@@ -66,6 +97,9 @@ However, some issue may happen because of the anonymization process. For instanc
   * Use spm to read DICOM header: https://www.na-mic.org/wiki/NAMIC_Wiki:DTI:DICOM_for_DWI_and_DTI
   * I need to read part 5 of this. https://web.stanford.edu/group/vista/cgi-bin/wiki/index.php/DTI_Preprocessing
 * Also https://web.stanford.edu/group/vista/cgi-bin/wiki/index.php/DTI_Preprocessing_User_Manual
+* A very nice tutorial page with question and answering: https://fsl.fmrib.ox.ac.uk/fslcourse/lectures/practicals/fdt1/index.html
+* A tutorial slide made by FSL people: https://fsl.fmrib.ox.ac.uk/fslcourse/lectures/fdt1.pdf
+https://www.mccauslandcenter.sc.edu/crnl/tools/advanced-dti
 
 
 
