--- a/_posts/2020-02-25-blog-DTI.md
+++ b/_posts/2020-02-25-blog-DTI.md
@@ -28,7 +28,7 @@ DICOM is usually the data format downloaded form the scanner or the PACS system.
 4. **Number Of Images In Mosaic:**
 Siemens stores 3D images in a 2D grid where at each grid point, there is another 2D image. So the number of mosaic field is used to reconstruct the 3D image from this 2D grid. https://nipy.org/nibabel/dicom/dicom_mosaic.html
 
-5. Toolbox: `pydicom`
+5. Toolbox `pydicom`:
 This is a python package and can edits DICOM header. Some examples are:
 ```
 # add new tag
@@ -39,6 +39,7 @@ ds.save_as(fname)
 ds.Manufacture='x' # change this tag to 'x'
 ```
 Notes: Use the code above, I added "Number of Mosaic" tag into the dicom. But dcm2niix still cannot read this tag. I am not sure if I add this in a wrong way. And also, I cannot name this new tag. The name of it remains as "private tag"
+
 ```
 # Add dictionary
 from pydicom.datadict import DicomDictionary, keyword_dict
@@ -56,6 +57,9 @@ ds = Dataset()  # or could get one from dcmread, etc
 ds.NumberOfImagesInMosaic = 37
 ```
 Notes: the outcome of this code is the same as the previous one -- a new tag named as 'private tag' located at (0019, 100a).The change of the dictionary will be gone once exit python. 
+
+6. Toolbox `MIPAV`:
+This is a C toolbox that can be uses to anonymize DICOM files and view DICOM header in a GUI.
 
 ### DTI basics
 1. B0 image and T2 shine-through:
